# ghostpost

./: README.md  db.sqlite3  manage.py  pyproject.toml
ghostpost_app/: admin.py  forms.py  models.py  views.py
ghostpost_app/migrations/: 0001_initial.py  0002_boastroast_totalvote.py  0003_auto_20200819_2356.py  0004_auto_20200820_0506.py
ghostpost_main/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: boasts.html  create_post.html  index.html  roasts.html  sort_by_votes.html
