[tool.poetry]
name = "ghostpost"
version = "0.1.0"
description = ""
authors = ["Edwin Torres <edwin_torres@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
